--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
        </div>
        <button class="eq"> = </button>
        <button class="clen"> C </button>
+       <button class="back"> backspace</button>
    </form>
    <script src="js/index.js"></script>
 
